# waver

./: .gitignore  LICENSE  PLAN.md  README.md  ROADMAP.md  docker-compose.yml
Arduino/waver_slate/: waver_slate.ino
Arduino/waver_slate_v2/: waver_slate_v2.ino
ROS2_Docker_lidar_stl06/: .gitmodules  Dockerfile  README.md  autostart.sh  config_docker.sh
ROS2_Docker_lidar_stl06/ros2_ws/src/ldlidar_stl_ros2/launch/: waver_ld06.launch.py
ROS2_Docker_lidar_stl06/scripts/: clean_build.sh  run.sh  run_x11.sh
ROS2_Docker_nav2/: Dockerfile
ROS2_Docker_nav2/config/: nav2_params.yaml
ROS2_Docker_nav2/launch/: nav2.launch.py
ROS2_Docker_oak_camera/: Dockerfile  README.md  autostart.sh  config_docker.sh
ROS2_Docker_oak_camera/config/: oak.yaml
ROS2_Docker_oak_camera/scripts/: build.sh  run.sh
ROS2_Docker_oak_camera/udev/: 80-movidius.rules
ROS2_Docker_slam/: Dockerfile
ROS2_Docker_slam/ros2_ws/src/waver_slam/: package.xml  setup.py
ROS2_Docker_slam/ros2_ws/src/waver_slam/config/: ekf.yaml  slam_toolbox.yaml
ROS2_Docker_slam/ros2_ws/src/waver_slam/launch/: slam.launch.py
ROS2_Docker_twin/: Dockerfile  README.md
ROS2_Docker_twin/ros2_ws/src/waver_arm/: package.xml  setup.cfg  setup.py
ROS2_Docker_twin/ros2_ws/src/waver_arm/test/: test_servo_map.py
ROS2_Docker_twin/ros2_ws/src/waver_arm/waver_arm/: arm_controller_node.py  pca9685_backend.py  servo_map.py
ROS2_Docker_twin/ros2_ws/src/waver_arm_description/: package.xml  setup.cfg  setup.py
ROS2_Docker_twin/ros2_ws/src/waver_arm_description/config/: controllers.yaml  kinematics.yaml
ROS2_Docker_twin/ros2_ws/src/waver_arm_description/launch/: display.launch.py
ROS2_Docker_twin/ros2_ws/src/waver_arm_description/rviz/: twin.rviz
ROS2_Docker_twin/ros2_ws/src/waver_arm_description/srdf/: waver_crab.srdf
ROS2_Docker_twin/ros2_ws/src/waver_arm_description/urdf/: arm_6dof.xacro  arm_standalone.urdf.xacro  control.xacro  materials.xacro  waver_crab.urdf.xacro  waver_crab_sim.urdf.xacro
ROS2_Docker_twin/scripts/: smoke_test.sh
ROS2_Docker_web/: Dockerfile  README.md  autostart.sh  config_docker.sh
ROS2_Docker_web/scripts/: bash.sh  run.sh
ROS2_Docker_web/www/: app.js  index.html
cad/: MEDIDAS.md  plataforma.scad
docs/: ARQUITECTURA.md  SESION_FISICA.md  WAVESHARE_WIKI_REFERENCE.md
tools/: mac_joystick_teleop.py  save_map.sh
tools/pi_host/: battery-shutdown-watchdog.service
wave_robot_tele_server_ros2/: Dockerfile  config_docker.sh
wave_robot_tele_server_ros2/ros2_ws/src/wave_robot_motor_driver/: CMakeLists.txt  LICENSE  README.md  package.xml
wave_robot_tele_server_ros2/ros2_ws/src/wave_robot_motor_driver/src/: motor_controller_node.cpp
wave_robot_tele_server_ros2/ros2_ws/src/waver_base/: README.md  package.xml  setup.cfg  setup.py
wave_robot_tele_server_ros2/ros2_ws/src/waver_base/config/: twist_mux.yaml
wave_robot_tele_server_ros2/ros2_ws/src/waver_base/launch/: base.launch.py
wave_robot_tele_server_ros2/ros2_ws/src/waver_base/waver_base/: battery_manager.py  battery_node.py  cmd_vel_to_motors.py  display_node.py  imu_node.py  lights_node.py  mode_manager.py
wave_robot_tele_server_ros2/ros2_ws/src/waver_description/: package.xml  setup.cfg  setup.py
wave_robot_tele_server_ros2/ros2_ws/src/waver_description/launch/: description.launch.py
wave_robot_tele_server_ros2/ros2_ws/src/waver_description/urdf/: waver.urdf.xacro
wave_robot_tele_server_ros2/scripts/: publish.sh  run.sh  run_x11.sh
