<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waver_slam</name>
  <version>0.1.0</version>
  <description>SLAM 2D del Wave Rover: rf2o (odometria laser) + EKF + slam_toolbox</description>
  <maintainer email="andresjtdev@gmail.com">Andres</maintainer>
  <license>MIT</license>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
