<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waver_arm</name>
  <version>0.1.0</version>
  <description>
    Controlador de los brazos 6DOF + torso L16 del WAVER CRAB vía PCA9685.
    Backend mock por defecto (simulación segura); el hardware real exige
    armado explícito (regla de oro del proyecto).
  </description>
  <maintainer email="andresjt93@gmail.com">Andres Jejen</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
