<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waver_base</name>
  <version>0.1.0</version>
  <description>
    Capa base del Wave Rover: cinematica diferencial (cmd_vel -> motor_commands),
    IMU QMI8658/AK09918 y bateria INA219 leidas directo por I2C, focos IO4/IO5
    y gestor de modos TELEOP/AUTO.
  </description>
  <maintainer email="andresjtdev@gmail.com">Andres</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <!-- smbus2 se instala via pip en el Dockerfile (no hay rosdep key fiable) -->

  <test_depend>ament_flake8</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
