<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waver_description</name>
  <version>0.1.0</version>
  <description>URDF del Waveshare Wave Rover con frames de lidar, OAK-D Lite e IMU.</description>
  <maintainer email="andresjtdev@gmail.com">Andres</maintainer>
  <license>MIT</license>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
